<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.pages.YoutubeFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">


                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/images_for_app_ui"
                    android:src="@drawable/yourtube" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/your_tube"
                    android:textColor="#111010"
                    android:textSize="19sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/searchContainer"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="@dimen/_11sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_11sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:background="@color/white"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchVideo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/search"
                    android:inputType="text"
                    app:iconifiedByDefault="false"
                    app:queryBackground="@null" />
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/contentsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="15dp"
                        android:gravity="center">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/newVideo"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="11dp"
                            android:background="@drawable/selected_tab"
                            android:text="@string/newVID"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/trending"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="11dp"
                            android:background="@drawable/un_selected_tab"
                            android:text="@string/trending"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/playlist"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/un_selected_tab"
                            android:text="@string/playlists"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/videoThumbnailContainer_new"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" />

                        <LinearLayout
                            android:id="@+id/videoThumbnailContainer_trending"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:visibility="gone" />

                        <LinearLayout
                            android:id="@+id/videoThumbnailContainer_playlists"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:visibility="gone" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/videoThumbnailContainer_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" />

                <TextView
                    android:id="@+id/cant_find"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/can_t_find_anything"
                    android:visibility="gone" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:text="@string/loading"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>


</RelativeLayout>